
#

orocos_component(event_echo event_echo-component.hpp event_echo-component.cpp) # ...you may add multiple source files
#orocos_executable(event_echo_main event_echo_main.cpp) # ...you may add multiple source files

#target_link_libraries( event_echo_main orocos-ocl-taskbrowser-${OROCOS_TARGET} )
#target_link_libraries( event_echo_main event_echo ${catkin_LIBRARIES})
